Added new feature support.